fix UT
Signed-off-by: Lantao Jin <ltjin@amazon.com>